--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 <h2>20+ years of expertise in the field</h2>
 <h3 id="knowledge-on-vehicle-dynamics-optimal-control-and-intelligent-vehicles---120m-and-100-partners">Knowledge on vehicle dynamics, Optimal Control and Intelligent Vehicles - 120M€ and 100 partners</h3>
 <div class="timeline">
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--secondary-color_light);">
 <div class="img-wrapper">
 <p><img data-src="./data/projects/Picture%201.png"></p>
 </div>
@@ -468,7 +468,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 </ul>
 </div>
 </div>
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--primary-color_light);">
 <div class="text">
 <ul>
 <li>ADAS Curve warning &amp; SafeSpeed Driver models</li>
@@ -482,7 +482,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 <p><img data-src="./data/projects/Picture%202.png"></p>
 </div>
 </div>
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--secondary-color_light);">
 <div class="img-wrapper">
 <p><img data-src="./data/projects/Picture%203.png"></p>
 </div>
@@ -496,7 +496,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 </ul>
 </div>
 </div>
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--primary-color_light);">
 <div class="text">
 <ul>
 <li>Integrated ADAS</li>
@@ -511,7 +511,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 <p><img data-src="./data/projects/Picture%204.png"> <img data-src="./data/projects/Picture%205.png"></p>
 </div>
 </div>
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--secondary-color_light);">
 <div class="img-wrapper">
 <p><img data-src="./data/projects/Picture%206.png"> <img data-src="./data/projects/Picture%207.jpg"> <img data-src="./data/projects/Picture%208.png"></p>
 </div>
@@ -528,7 +528,7 @@ M. Piazza, S. Taddei, G. Corradini, M. Larcher, D. Stocco, F. Biral
 </ul>
 </div>
 </div>
-<div class="item" style="width: 18%">
+<div class="item" style="width: 18%; background-color: var(--primary-color_light);">
 <div class="text">
 <ul>
 <li>Autonomous Driving, Artificial driver,</li>
